--- a/frontend/src/components/New/new.css
+++ b/frontend/src/components/New/new.css
@@ -1,10 +1,10 @@
 #root {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
 }
-.inputfield{
+/* .inputfield{
     background-color: white;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
@@ -26,7 +26,7 @@
     flex: 1;
     max-width: 300px;
 } */
-.input-item{
+/* .input-item{
     display: flex;
     flex-direction: column;
 }
@@ -48,4 +48,77 @@
     padding: 0.5rem 0.75rem;
     border: 1px solid #cbd5e0;
     border-radius: 0.375rem;
+} */ 
+.title{
+    margin-bottom: 4px;
+    font-weight: bold;
+    align-self: flex-start;
+}
+
+.inputfield {
+    background-color: rgb(200, 200, 203);
+    padding: 30px;
+    max-width: 500px; /* Optional: limit form width */
+    max-height: max-content;
+    margin: 0 auto; /* Center the form */
+    border-radius: 10px;
+    color: black;
+}
+
+.inputcol {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.input-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.input-item label {
+    font-weight: 500;
+    margin-bottom: 8px;
+    color: rgb(0, 0, 0);
+}
+
+.input-item input,
+.input-item select {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 100%; /* Full width of the container */
+    box-sizing: border-box;
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+.btn{
+    justify-content: space-between;
+}
+.submit{
+    margin: 20px;
+    padding: 15px;
+    width: max-content;
+    background-color:  rgb(0, 126, 244);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.reset{
+    margin: 20px;
+    padding: 15px;
+    width: max-content;
+    background-color: rgb(255, 0, 0);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.error{
+    color: red;
+    font-size: small;
 }
