--- a/frontend/src/components/New/new.css
+++ b/frontend/src/components/New/new.css
@@ -2,7 +2,7 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 1rem;
-    text-align: center;
+    /* text-align: center; */
 }
 /* .inputfield{
     background-color: white;
@@ -49,10 +49,15 @@
     border: 1px solid #cbd5e0;
     border-radius: 0.375rem;
 } */ 
+
+.head{
+    align-items: center;
+}
 .title{
     margin-bottom: 4px;
     font-weight: bold;
-    align-self: flex-start;
+    /* text-align: start; */
+    
 }
 
 .inputfield {
@@ -97,7 +102,7 @@
     justify-content: space-between;
 }
 .submit{
-    margin: 20px;
+    margin: 10px;
     padding: 15px;
     width: max-content;
     background-color:  rgb(0, 126, 244);
@@ -108,7 +113,7 @@
 }
 
 .reset{
-    margin: 20px;
+    margin: 10px;
     padding: 15px;
     width: max-content;
     background-color: rgb(255, 0, 0);
